assert(in_bb(n)) failed: must be

XMLWordPrintable

    • b07

        I forgot to check that Load node is in processed loop block in the fix for 8001183:

        - if (load->is_Load() && (velt_type(load)->basic_type() == T_INT)) {
        + if (load->is_Load() && in_bb(load) && (velt_type(load)->basic_type() == T_INT)) {

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: