8001635: assert(in_bb(n)) failed: must be

Added missed check that Load node is in processed loop block.

Reviewed-by: twisti